--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,6 +1,8 @@
 <header class="nav bg-white shadow-sm">
     <div class="logo-container">
-      <i class="icon icon-menu-burger"></i>
+      <button nz-button (click)="toggleCollapsed()">
+        <i class="icon icon-menu-burger"></i>
+      </button>
     </div>
     <div class="my-2">
       <img
